fix: clean imports and update Swagger to show DTOs in schemas
