# src/screenshot/screenshot.controller.ts
@@ -1,6 +1,8 @@
 import { Controller } from '@nestjs/common';
+import { ApiTags } from '@nestjs/swagger';
 import { ScreenshotService } from './screenshot.service';
 
+@ApiTags('screenshot')
 @Controller('screenshot')
 export class ScreenshotController {
   constructor(private readonly screenshotService: ScreenshotService) {}
